--- a/Themes/default/css/install.css
+++ b/Themes/default/css/install.css
@@ -1,16 +1,6 @@
 body
 {
-	width: 90%;
-}
-#top_section
-{
-	height: 70px;
-	min-height: 65px;
-}
-#upper_section
-{
-	margin-bottom: 0;
-	padding: 0;
+	padding-top: 20px;
 }
 #upper_section .user
 {
